Configurando elementos pre-existentes para iniciar como alert-success

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			</div>
 			<div id="principal" class="col-md-8">
 				<div class="alert alert-success"><strong>Parabéns! </strong>Você foi o sorteado.</div>
-				<div class="alert"><strong>Cuidado! </strong>Você foi exposto.</div>
-				<div class="alert alert-warning"><strong>Atenção: </strong>foram encontrados algunas exceções no código que podem vir a dar probelmas.</div>
+				<div class="alert alert-success"><strong>Cuidado! </strong>Você foi exposto.</div>
+				<div class="alert alert-success"><strong>Atenção: </strong>foram encontrados algunas exceções no código que podem vir a dar probelmas.</div>
 			</div>
 		</div>		
 	</div>
