Alteração na cor do botão Adicionar (azul - verde)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<button id="btnwarning" class="btn btn-default">Warning</button>
 					<button id="btnerror" class="btn btn-default">Error</button>
 					<button id="btnsuccess" class="btn btn-default">Success</button>
-					<button id="btnadiciona" class="btn btn-primary">Adiciona <span id="elqtde" class="badge">0</span></button>
+					<button id="btnadiciona" class="btn btn-success">Adiciona <span id="elqtde" class="badge">0</span></button>
 				</div>
 				<div id="xmlarea"></div>
 			</div>
