--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 	<div class="container" style="margin-top: 20px;">
 
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-5">
 				<div style="margin-bottom: 20px;">
-					<button id="btnwarning" class="btn btn-default">Warning</button>
+					<button id="btnwarning" class="btn btn-default">Warning <span class="label label-warning">new</span></button>
 					<button id="btnerror" class="btn btn-default">Error</button>
 					<button id="btnsuccess" class="btn btn-default">Success</button>
 					<button id="btnadiciona" class="btn btn-success">Adiciona <span id="elqtde" class="badge">0</span></button>
 				</div>
 				<div id="xmlarea"></div>
 			</div>
-			<div id="principal" class="col-md-8">
+			<div id="principal" class="col-md-7">
 				<div class="alert alert-success"><strong>Parabéns! </strong>Você foi o sorteado.</div>
 				<div class="alert alert-success"><strong>Cuidado! </strong>Você foi exposto.</div>
 				<div class="alert alert-success"><strong>Atenção: </strong>foram encontrados algunas exceções no código que podem vir a dar probelmas.</div>
