--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<div class="row">
 			<div class="col-md-5">
 				<div style="margin-bottom: 20px;">
-					<button id="btnwarning" class="btn btn-default">Warning <span class="label label-warning">new</span></button>
-					<button id="btnerror" class="btn btn-default">Error</button>
-					<button id="btnsuccess" class="btn btn-default">Success</button>
+					<button id="btnwarning" class="btn btn-default">Warning <span id="warningcount" class="badge">0</span></button>
+					<button id="btnerror" class="btn btn-default">Error <span id="errorcount" class="badge">0</span></button>
+					<button id="btnsuccess" class="btn btn-default">Success <span id="successcount" class="badge">0</span></button>
 					<button id="btnadiciona" class="btn btn-success">Adiciona <span id="elqtde" class="badge">0</span></button>
 				</div>
 				<div id="xmlarea"></div>
@@ -38,21 +38,31 @@
 	<script type="text/javascript">
 
 		var el = new Elemento($(".alert"), $("#elqtde"), $("#xmlarea"));
+		var clickWarning = 0;
+		var clickError = 0;
+		var clickSuccess = 0;
+
 
 
 		$(document).ready(function(){
 			$("#btnwarning").click(function(){
 				el.setWarning();
+				clickWarning++;
+				$("#warningcount").html(clickWarning);
 				this.blur();
 			});
 
 			$("#btnerror").click(function(){
 				el.setDanger();
+				clickError++;
+				$("#errorcount").html(clickError);
 				this.blur();
 			});
 
 			$("#btnsuccess").click(function(){
 				el.setSuccess();
+				clickSuccess++;
+				$("#successcount").html(clickSuccess);
 				this.blur();
 			});
 
