Alteradas as cores dos botões para melhoria de usabilidade

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<div class="row">
 			<div class="col-md-5">
 				<div style="margin-bottom: 20px;">
-					<button id="btnwarning" class="btn btn-default">Warning <span id="warningcount" class="badge">0</span></button>
-					<button id="btnerror" class="btn btn-default">Error <span id="errorcount" class="badge">0</span></button>
-					<button id="btnsuccess" class="btn btn-default">Success <span id="successcount" class="badge">0</span></button>
-					<button id="btnadiciona" class="btn btn-success">Adiciona <span id="elqtde" class="badge">0</span></button>
+					<button id="btnwarning" class="btn btn-warning">Warning <span id="warningcount" class="badge">0</span></button>
+					<button id="btnerror" class="btn btn-danger">Error <span id="errorcount" class="badge">0</span></button>
+					<button id="btnsuccess" class="btn btn-success">Success <span id="successcount" class="badge">0</span></button>
+					<button id="btnadiciona" class="btn btn-default">Adiciona <span id="elqtde" class="badge">0</span></button>
 				</div>
 				<div id="xmlarea"></div>
 			</div>
