--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jscript.js"></script>
+	<script type="text/javascript" src="js/jscript2.js"></script>
 
 	<title>Título da página</title>
 </head>
